# hera_control

./: 99-hera-devices.rules  99-hera-diveces.rules  CMakeLists.txt  README.md  install_dependencies.sh  package.xml
arduino/base/: base.ino
config/manipulator/: dynamixel_controller.yaml
launch/: dynamixel_controller.launch
launch/head/: dynamixel_controller_head.launch
launch/manipulator/: manip3.launch
src/: gazebo_control.py  head_control.py
src/head/: head.py
src/manipulator/: manip_meio.py  manip_nova.py  manipulator.py
